fixed broken scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
 
 body {
     max-width: 100vw;
-    height: 100%;
+    height: fit-content;
     margin: 0;
-    overflow: hidden;
+   
 }
 
